--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,6 @@ dependencies:
   rflutter_alert: ^1.1.0
   flutter_svg: ^0.19.2+1
   provider: ^4.3.2+3
-  shared_preferences: ^0.5.12+4
   firebase_core: ^0.5.2
   firebase_auth: ^0.18.3
   firebase_analytics: ^6.2.0
@@ -32,9 +31,9 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/svg/
 
   fonts:
     - family: Calibri
