--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   firebase_analytics: ^6.2.0
   firebase_performance: ^0.4.2
   cloud_firestore: ^0.14.3
+  firebase_storage: ^5.0.1
+
 
 dev_dependencies:
   flutter_test:
